--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </div>
     </main>
 
+    <h1>Jeremias Oyhamburo</h1>
+    <h2>Curso Js</h2>
     <script src="./js/main.js"></script>
     
     
