--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
             <a href="./inventory.html">inventory </a>
         </button>
         <button onclick="clear()">eliminar</button>
+        <button onclick="cartel()">cartel</button>
     </main>
 
     <h1>Jeremias Oyhamburo</h1>
     <h2>Curso Js</h2>
-    <script src="./js/main.js"></script>
     
-
-    <div class="hola">
-
-    </div>
+    <!-- scripts -->
+    <script src="./js/main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     
 </body>
