--- a/inventory.html
+++ b/inventory.html
@@ -11,10 +11,11 @@
     <main class="main">
         <h1>Inventory</h1>
         <section class="inventory">
-            
         </section>
-        
     </main>
     <script src="./js/inventory.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <button onclick="cartel()">alert</button>
 </body> 
 </html>
+
