antes de la pelea

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="item2">
                 <div>TYPES</div>
-                    <div class="tipo-1"></div>
-                    <div class="tipo-2"></div>
+                <div class="tipo-1"></div>
+                <div class="tipo-2"></div>
             </div>
             <div class="item3">
                 <img src="" alt="" class="pokedex__pantalla__img" id="foto">
@@ -29,6 +29,8 @@
             <div class="item4">
                 <div class="item4-div">
                 </div>
+                <div class="tipo-3" style="cursor: pointer;"></div>
+
             </div>
         </div>
         <div class="input">
@@ -38,8 +40,8 @@
         <button>
             <a href="./inventory.html">inventory </a>
         </button>
-        <button onclick="clear()">eliminar</button>
-        <button onclick="cartel()">cartel</button>
+        <a href="./captura.html">JEREMIAS</a>
+
     </main>
 
     <h1>Jeremias Oyhamburo</h1>
