--- a/inventory.html
+++ b/inventory.html
@@ -10,6 +10,11 @@
 <body style="background-color: #1b252f; display: flex; justify-content: center;">
     <main class="main">
         <h1>Inventory</h1>
+        <div class="main__nav">
+          <a href="./captura.html">CAPTURA</a>
+          <a href="./index.html">INDEX</a>
+          <a href="#" onclick="empty()">EMPTY</a>
+        </div>
         <section class="inventory">
             <!-- <article class="flip-card">
 
